@@ -22,9 +22,9 @@
  *  DISCLAMED. This includes but is not limited to warranties of
  *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  *
- * $Revision: 1.4 $
+ * $Revision: 1.5 $
  * $Author: dannysmith $
- * $Date: 2001-08-01 03:46:27 $
+ * $Date: 2001-08-28 21:49:38 $
  *
  */
 
@@ -127,11 +127,14 @@
  * functions later on in the file which use va_list. That conflicts with
  * using stdio.h and varargs.h in the same file, so I do the typedef myself.
  */
-#ifndef _VA_LIST
+#ifndef	_VA_LIST
 #define _VA_LIST
-typedef	char* va_list;
+#if defined __GNUC__ && __GNUC__ >= 3
+typedef __builtin_va_list va_list;
+#else
+typedef char* va_list;
 #endif
-
+#endif
 /*
  * The structure underlying the FILE type.
  *
